src/objects/c2g__codaPurchaseCreditNoteLineItem__c.object
<CustomObject>
    <description>The line items on the payable credit note, such as product, unit price, quantity and line total.</description>
    <fields>
        <fullName>c2g__CalculateTaxValuefromRate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Calculate Tax Value from Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__DateFrom__c</fullName>
        <label>Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__DateTo__c</fullName>
        <label>Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__DeriveLineNumber__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Line Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__DeriveTaxRateFromCode__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Tax Rate from Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__DeriveUnitPricefromProduct__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Unit Price from Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Payable Credit Note Line Items</relationshipLabel>
        <relationshipName>PurchaseCreditNoteLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Payable Credit Note Line Items</relationshipLabel>
        <relationshipName>PurchaseCreditNoteLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Payable Credit Note Line Items (Dimension 3)</relationshipLabel>
        <relationshipName>PurchaseCreditNoteLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__EditTaxValue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edit Tax Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__InputVATCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Input Tax Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Payable Credit Note Line Items (Input VAT/GST Code)</relationshipLabel>
        <relationshipName>PurchaseCreditNoteLineItemsInput</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__LineDescription__c</fullName>
        <label>Line Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__LineNumber__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__NetValue__c</fullName>
        <formula>c2g__UnitPrice__c * c2g__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Payable Credit Note Line Items</relationshipLabel>
        <relationshipName>Purchase_Credit_Note_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Payable Credit Note Line Items</relationshipLabel>
        <relationshipName>PurchaseNoteLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PurchaseCreditNote__c</fullName>
        <description>The auto-generated payable credit note number.</description>
        <label>Payable Credit Note Number</label>
        <referenceTo>c2g__codaPurchaseCreditNote__c</referenceTo>
        <relationshipLabel>Payable Credit Note Line Items</relationshipLabel>
        <relationshipName>PurchaseCreditNoteLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__SetTaxCodetoDefault__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Set Tax Code to Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__TaxCode2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Input Tax Code 2</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Payable Credit Note Line Items (Tax Code 2)</relationshipLabel>
        <relationshipName>PurchaseCreditNoteLineItemsTC2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TaxCodeCombined__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Combined Tax Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Payable Credit Note Line Items (Combined Tax Code)</relationshipLabel>
        <relationshipName>PurchaseCreditNoteLineItemsTCCombined</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TaxRate1__c</fullName>
        <label>Tax Rate</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__TaxRate2__c</fullName>
        <label>Tax Rate 2</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__TaxRateTotal__c</fullName>
        <formula>c2g__TaxRate1__c + c2g__TaxRate2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Rate Total</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__TaxValue1__c</fullName>
        <label>Tax Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__TaxValue2__c</fullName>
        <label>Tax Value 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__TaxValueTotal__c</fullName>
        <formula>c2g__TaxValue1__c + c2g__TaxValue2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Value Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__UnitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <label>Payable Credit Note Line Item</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Payable Credit Note Line Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payable Credit Note Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>